--- a/chrome/locale/en-US/options.dtd
+++ b/chrome/locale/en-US/options.dtd
@@ -1,19 +1,4 @@
-<!ENTITY tabbyoptions.Tabs "Tabs">
+<!ENTITY tabbyoptions.Background "Background">
 <!ENTITY tabbyoptions.Icons "Icons">
-<!ENTITY tabbyoptions.facebook "Facebook">
-<!ENTITY tabbyoptions.twitter "Twitter">
-<!ENTITY tabbyoptions.youtube "Youtube">
-<!ENTITY tabbyoptions.wash "Wash">
-<!ENTITY tabbyoptions.gplus "Google+">
-<!ENTITY tabbyoptions.gdrive "Google Drive">
-<!ENTITY tabbyoptions.bank "Bank">
-<!ENTITY tabbyoptions.linked "LinkedIn">
-<!ENTITY tabbyoptions.blogger "Blogger">
-<!ENTITY tabbyoptions.pint "Pinterest">
-<!ENTITY tabbyoptions.git "Github">
-<!ENTITY tabbyoptions.space "Separator">
-<!ENTITY tabbyoptions.weather "Weather">
-<!ENTITY tabbyoptions.clock "Clock">
-<!ENTITY tabbyoptions.White "White">
-<!ENTITY tabbyoptions.Black "Black">
-<!ENTITY tabbyoptions.Color "Color">
+<!ENTITY tabbyoptions.foldericon "Folder Icon">
+<!ENTITY tabbyoptions.faviocn "Favicon">
